--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,95 @@
+/* * {
+  border: 1px solid red;
+} */
+
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+figure,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role='list'],
+ol[role='list'] {
+  list-style: none;
+}
+
+/* Set core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+/* Set core body defaults */
+body {
+  min-height: 100vh;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
+
+/* Make images easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+   scroll-behavior: auto;
+  }
+  
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+
+* {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 .wrapper {
   width: 100vw;
-  height: 100vh;
+  height: auto;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -11,15 +100,28 @@
   padding: 10px;
 }
 
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 48px;
+}
+
 form {
   display: flex;
   flex-direction: column;
   margin-bottom: 48px;
+  padding: 16px;
+  background-color: white;
+  border: 1px solid whitesmoke;
+  border-radius: 6px;
+  box-shadow: 0px 4px 16px 0 rgba(0, 0, 0, .16);
 }
 
 input {
   height: 32px;
-  margin-bottom: 4px;
+  width: 100%;
+  margin-bottom: 8px;
   padding: 0px 8px;
   background-color: whitesmoke;
   border: 1px solid darkgray;
@@ -28,15 +130,35 @@ input {
 
 button {
   height: 32px;
+  padding: 0px 16px;
   background-color: darkslateblue;
   border: 1px solid darkslategray;
   border-radius: 6px;
+  font-weight: bold;
   color: white;
 }
 
 .sheetCard {
-  margin-bottom: 4px;
-  padding: 0px 8px;
-  border: 1px solid lightgray;
+  margin-bottom: 8px;
+  padding: 16px;
+  background-color: white;
+  border: 1px solid whitesmoke;
   border-radius: 6px;
+  box-shadow: 0px 4px 16px 0 rgba(0, 0, 0, .16);
+}
+
+.race {
+  margin-bottom: 16px;
+  color: lightgray;
+}
+
+.stat {
+  display: flex;
+  align-items: center;
+  padding: 4px 0px;
+  border-top: 1px solid whitesmoke;
+}
+
+.stat h5 {
+  margin-right: 4px;
 }
