--- a/src/App.css
+++ b/src/App.css
@@ -87,16 +87,46 @@ select {
   -moz-osx-font-smoothing: grayscale;
 }
 
+nav {
+  display: flex;
+  justify-content: center;
+  margin: 8px 8px;
+  padding: 16px;
+  background-color: darkslateblue;
+  border-radius: 6px;
+}
+nav a {
+  margin: 0px 8px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 12px;
+  color: white;
+  text-decoration: none;
+}
+
+nav a:hover {
+  opacity: 80%;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  padding: 16px;
+  background-color: darkslateblue;
+  color: white;
+}
+
 .wrapper {
   width: 100vw;
   height: auto;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: top;
 }
 .container {
   max-width: 75vw;
+  margin: auto;
   padding: 10px;
 }
 
@@ -105,6 +135,10 @@ header {
   flex-direction: column;
   align-items: center;
   margin-bottom: 48px;
+}
+
+header h1 {
+  text-align: center;
 }
 
 form {
