--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,10 @@ html:focus-within {
 body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
+  font-size: 62.5%;
   line-height: 1.5;
+  background-color: #1F2023;
+  color: #CCCCCC;
 }
 
 /* A elements that don't have a class get default styles */
@@ -87,19 +90,27 @@ select {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.center-text {
+  text-align: center;
+}
+
+.center-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
 nav {
   display: flex;
   justify-content: center;
-  margin: 8px 8px;
   padding: 16px;
-  background-color: darkslateblue;
-  border-radius: 6px;
+  border-bottom: 1px solid #383B40;
 }
 nav a {
   margin: 0px 8px;
-  text-transform: uppercase;
   font-weight: bold;
-  font-size: 12px;
+  font-size: .8rem;
   color: white;
   text-decoration: none;
 }
@@ -111,45 +122,47 @@ nav a:hover {
 .footer {
   display: flex;
   justify-content: center;
-  padding: 16px;
-  background-color: darkslateblue;
-  color: white;
-}
-
-.wrapper {
-  width: 100vw;
-  height: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: top;
+  padding: 8px;
+  font-size: .6rem;
 }
 .container {
-  max-width: 75vw;
+  max-width: 650px;
   margin: auto;
-  padding: 10px;
+}
+
+.narrow-container {
+  max-width: 350px;
+  margin: auto;
+}
+
+section {
+  padding: 24px;
 }
 
 header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 48px;
+  padding: 24px;
 }
 
 header h1 {
   text-align: center;
+  color: white;
 }
 
 form {
   display: flex;
   flex-direction: column;
-  margin-bottom: 48px;
   padding: 16px;
-  background-color: white;
-  border: 1px solid whitesmoke;
+  background-color: #27292D;
+  border: 1px solid #383B40;
   border-radius: 6px;
   box-shadow: 0px 4px 16px 0 rgba(0, 0, 0, .16);
+}
+
+label h5{
+  margin-bottom: 2px;
 }
 
 input {
@@ -157,40 +170,62 @@ input {
   width: 100%;
   margin-bottom: 8px;
   padding: 0px 8px;
-  background-color: whitesmoke;
-  border: 1px solid darkgray;
+  background-color: #27292D;
+  border: 1px solid #383B40;
   border-radius: 6px;
+  color: white;
 }
 
 button {
   height: 32px;
   padding: 0px 16px;
-  background-color: darkslateblue;
-  border: 1px solid darkslategray;
+  background-color: #852AF9;
+  border: none;
   border-radius: 6px;
   font-weight: bold;
   color: white;
 }
 
+button:hover {
+  background-color: #6906E9;
+}
+
+.sheetList {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .sheetCard {
-  margin-bottom: 8px;
+  min-width: 200px;
+  margin: 8px;
   padding: 16px;
-  background-color: white;
-  border: 1px solid whitesmoke;
+  background-color: #27292D;
+  border: 1px solid #383B40;
   border-radius: 6px;
   box-shadow: 0px 4px 16px 0 rgba(0, 0, 0, .16);
 }
 
+.actions {
+  display: flex;
+  flex-wrap: wrap;
+  padding-top: 8px;
+  border-top: 1px solid #383B40;
+}
+
+.actions button {
+  margin-right: 8px;
+}
+
 .race {
   margin-bottom: 16px;
-  color: lightgray;
+  color: #CCC;
 }
 
 .stat {
   display: flex;
   align-items: center;
   padding: 4px 0px;
-  border-top: 1px solid whitesmoke;
+  border-top: 1px solid #383B40;
 }
 
 .stat h5 {
