--- a/src/App.css
+++ b/src/App.css
@@ -90,6 +90,25 @@ select {
   -moz-osx-font-smoothing: grayscale;
 }
 
+h1 {
+  font-size: 1.6rem;
+}
+h2 {
+  font-size: 1.4rem;
+}
+h3 {
+  font-size: 1.2rem;
+}
+h4 {
+  font-size: 1rem;
+}
+h5 {
+  font-size: .8rem;
+}
+p {
+  font-size: .8rem;
+}
+
 .center-text {
   text-align: center;
 }
@@ -102,9 +121,12 @@ select {
 }
 
 nav {
+  position: fixed;
+  width: 100%;
   display: flex;
   justify-content: center;
   padding: 16px;
+  background-color: #1F2023;
   border-bottom: 1px solid #383B40;
 }
 nav a {
@@ -123,8 +145,12 @@ nav a:hover {
   display: flex;
   justify-content: center;
   padding: 8px;
+}
+
+.footer p {
   font-size: .6rem;
 }
+
 .container {
   max-width: 650px;
   margin: auto;
@@ -143,7 +169,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 24px;
+  padding: 72px 24px 24px 24px;
 }
 
 header h1 {
@@ -174,6 +200,7 @@ input {
   border: 1px solid #383B40;
   border-radius: 6px;
   color: white;
+  font-size: .8rem;
 }
 
 button {
@@ -184,6 +211,7 @@ button {
   border-radius: 6px;
   font-weight: bold;
   color: white;
+  font-size: .8rem;
 }
 
 button:hover {
@@ -203,6 +231,10 @@ button:hover {
   border: 1px solid #383B40;
   border-radius: 6px;
   box-shadow: 0px 4px 16px 0 rgba(0, 0, 0, .16);
+}
+
+.sheetCard h4 {
+  color: white;
 }
 
 .actions {
