--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,20 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /* * {
   border: 1px solid red;
 } */
 
 /* Box sizing rules */
-*,
+/* *,
 *::before,
 *::after {
   box-sizing: border-box;
-}
+} */
 
 /* Remove default margin */
-body,
+/* body,
 h1,
 h2,
 h3,
@@ -23,51 +27,51 @@ blockquote,
 dl,
 dd {
   margin: 0;
-}
+} */
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul[role='list'],
+/* ul[role='list'],
 ol[role='list'] {
   list-style: none;
-}
+} */
 
 /* Set core root defaults */
-html:focus-within {
+/* html:focus-within {
   scroll-behavior: smooth;
-}
+} */
 
 /* Set core body defaults */
-body {
+/* body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   font-size: 62.5%;
   line-height: 1.5;
   background-color: #1F2023;
   color: #CCCCCC;
-}
+} */
 
 /* A elements that don't have a class get default styles */
-a:not([class]) {
+/* a:not([class]) {
   text-decoration-skip-ink: auto;
-}
+} */
 
 /* Make images easier to work with */
-img,
+/* img,
 picture {
   max-width: 100%;
   display: block;
-}
+} */
 
 /* Inherit fonts for inputs and buttons */
-input,
+/* input,
 button,
 textarea,
 select {
   font: inherit;
-}
+} */
 
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
-@media (prefers-reduced-motion: reduce) {
+/* @media (prefers-reduced-motion: reduce) {
   html:focus-within {
    scroll-behavior: auto;
   }
@@ -88,9 +92,9 @@ select {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+} */
 
-h1 {
+/* h1 {
   font-size: 1.6rem;
 }
 h2 {
@@ -262,4 +266,4 @@ button:hover {
 
 .stat h5 {
   margin-right: 4px;
-}
+} */
